[gd_scene load_steps=7 format=3 uid="uid://b0wnfho1jdj1h"]

[ext_resource type="Script" uid="uid://cq845ifgwamcw" path="res://scripts/start.gd" id="1_0auqf"]
[ext_resource type="PackedScene" uid="uid://c4evahqg8jtly" path="res://scenes/champions/mage.tscn" id="1_kdmts"]
[ext_resource type="PackedScene" uid="uid://cc4u01c30ok5y" path="res://scenes/champions/paladin.tscn" id="2_0auqf"]
[ext_resource type="PackedScene" uid="uid://bf8s0geh1flxk" path="res://scenes/champions/druid.tscn" id="3_y16t7"]
[ext_resource type="PackedScene" uid="uid://d3ih6it1bavcu" path="res://scenes/champions/rogue.tscn" id="4_4ge6i"]
[ext_resource type="Texture2D" uid="uid://c76vfluog5iss" path="res://images/background.png" id="6_y16t7"]

[node name="Start" type="Node3D"]
script = ExtResource("1_0auqf")

[node name="3D" type="Node3D" parent="."]

[node name="Camera" type="Camera3D" parent="3D"]
transform = Transform3D(-1, 8.74228e-08, 3.82137e-15, 0, -4.37114e-08, 1, 8.74228e-08, 1, 4.37114e-08, 0, 3, 0)

[node name="Light1" type="DirectionalLight3D" parent="3D"]
transform = Transform3D(1, 0, 0, 0, 0.0339576, 0.999423, 0, -0.999423, 0.0339576, 0, 9.44136, 0)

[node name="Light3" type="DirectionalLight3D" parent="3D"]
transform = Transform3D(1, 0, 0, 0, -0.975596, 0.219574, 0, -0.219574, -0.975596, 0, 3.79288, -16.4713)

[node name="Cards" type="Node" parent="3D"]

[node name="Mage" parent="3D/Cards" instance=ExtResource("1_kdmts")]
transform = Transform3D(-1, 8.74228e-08, 0, 3.82137e-15, 4.37114e-08, 1, 8.74228e-08, 1, -4.37114e-08, 1.05, 0, 0)

[node name="Paladin" parent="3D/Cards" instance=ExtResource("2_0auqf")]
transform = Transform3D(-1, 8.74228e-08, 0, 3.82137e-15, 4.37114e-08, 1, 8.74228e-08, 1, -4.37114e-08, 0.35, 0, 0)

[node name="Druid" parent="3D/Cards" instance=ExtResource("3_y16t7")]
transform = Transform3D(-1, 8.74228e-08, 0, 3.82137e-15, 4.37114e-08, 1, 8.74228e-08, 1, -4.37114e-08, -0.35, 0, 0)

[node name="Rogue" parent="3D/Cards" instance=ExtResource("4_4ge6i")]
transform = Transform3D(-1, 8.74228e-08, 0, 3.82137e-15, 4.37114e-08, 1, 8.74228e-08, 1, -4.37114e-08, -1.05, 0, 0)

[node name="Background" type="Sprite3D" parent="3D"]
transform = Transform3D(0.77, 0, 0, 0, -3.36578e-08, -0.77, 0, 0.77, -3.36578e-08, 0, -1.5, 0)
texture = ExtResource("6_y16t7")

[node name="GUI" type="CanvasLayer" parent="."]
physics_interpolation_mode = 2

[node name="Control" type="Control" parent="GUI"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Caption" type="Label" parent="GUI/Control"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.113
anchor_right = 1.0
anchor_bottom = 0.194
offset_top = -0.224007
offset_right = 0.455933
offset_bottom = 2.28799
theme_override_font_sizes/font_size = 27
text = "Title"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Two_Players" type="Button" parent="GUI/Control"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.312
anchor_top = 0.446
anchor_right = 0.468
anchor_bottom = 0.577
offset_left = -0.424011
offset_top = -0.00799561
offset_right = -0.136047
offset_bottom = 0.103973
text = "2 players"

[node name="Four_players" type="Button" parent="GUI/Control"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.541
anchor_top = 0.448
anchor_right = 0.697
anchor_bottom = 0.579
offset_left = -0.231995
offset_top = -0.304016
offset_right = 0.0559692
offset_bottom = -0.192047
text = "4 players"

[connection signal="button_down" from="GUI/Control/Two_Players" to="." method="_on_two_players_button_down"]
[connection signal="button_down" from="GUI/Control/Four_players" to="." method="_on_four_players_button_down"]
